# pandemic-simulation

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  doctest.h  entities.sample.txt  todo
assets/: CMakeLists.txt  README.md  background.sample.xcf  entities.sample.txt
scripts/: quick-run.sh
seeder/: CMakeLists.txt  entities.sample.txt  main.cpp  seeder.config.h  seeder.cpp
seeder/Seeder/: CMakeLists.txt  seeder.cpp  seeder.hpp
seeder/Seeder/configurations/: houses.hpp  people.hpp
src/: CMakeLists.txt  main.cpp  types.hpp  wintypes.hpp
src/Bitmap/: CMakeLists.txt  bitmap.cpp  bitmap.hpp
src/Config/: CMakeLists.txt  config.cpp  config.hpp
src/Engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/Entity/: CMakeLists.txt  ai.cpp  ai.hpp  entity-accessors.cpp  entity-loops.cpp  entity.cpp  entity.hpp
src/Entity/AI/: CMakeLists.txt  ai.cpp  ai.hpp
src/Entity/AI/variants/: ai-variants.hpp  grad.hpp  man.hpp  null.hpp  old.hpp  random.hpp  teen.hpp  uni.hpp
src/Pathfinder/: CMakeLists.txt  old_stuff  pathfinder.cpp  pathfinder.hpp
src/Pathfinder/Map/: CMakeLists.txt  map.cpp  map.hpp
src/World/: CMakeLists.txt  iworld.hpp  world-loops.cpp  world-parsers.cpp  world.cpp  world.hpp
src/World/Parser/: CMakeLists.txt  parser.cpp  parser.hpp
tests/: CMakeLists.txt  ai.test.cpp  config.test.cpp  pathfinder.test.cpp  sample.test.cpp
tests/assets/: CMakeLists.txt
