CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(Lab VERSION 0.1)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

FIND_PACKAGE(SFML 2.5 COMPONENTS graphics window audio REQUIRED)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS} ")