CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(Lab VERSION 0.1)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

FIND_PACKAGE(SFML 2.5 COMPONENTS graphics window audio REQUIRED)

INCLUDE_DIRECTORIES(
        lab PUBLIC
        "${PROJECT_SOURCE_DIR}/src"
        "${PROJECT_SOURCE_DIR}/src/Pathfinder"
        "${PROJECT_SOURCE_DIR}/src/Pathfinder/Map"
        "${PROJECT_SOURCE_DIR}/src/Entity"
        "${PROJECT_SOURCE_DIR}/src/World"
        "${PROJECT_SOURCE_DIR}/src/World/Parser"
        "${PROJECT_SOURCE_DIR}/src/Config"
        "${PROJECT_SOURCE_DIR}/dist/MicroPather"
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(seeder)
ADD_SUBDIRECTORY(dist)
ADD_SUBDIRECTORY(assets)

SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -g -fsanitize=\"address\"")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS} ")
