ADD_EXECUTABLE(pandemic main.cpp)

ADD_SUBDIRECTORY(Config)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Entity)
ADD_SUBDIRECTORY(Pathfinder)
ADD_SUBDIRECTORY(World)

TARGET_LINK_LIBRARIES(pandemic Engine)

SET_TARGET_PROPERTIES(
        pandemic PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
)
